# Langchain-MCP

./: .gitignore  README.md
claude/mcp/servers/terminal_server/: pyproject.toml  terminal_server.py
clients/mcp-client/: .env  langchain_mcp_client.py  langchain_mcp_client_wconfig.py  pyproject.toml  server_local_config.json  stream_lit_ui.py  streamlit_client_stdio.py  streamlit_ui.py
gemini/clients/mcp-client/: pyproject.toml
servers/terminal_server/: Dockerfile  pyproject.toml  ref_claude_config.py  terminal_server.py
workspace/: temp.txt
workspace/conversations/: conversation_20250713184631.json
